{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 906,
  "lineage": "22456825-385e-0766-02b2-142c6237b356",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:security-group/sg-082d73104fc4a6acb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-082d73104fc4a6acb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra-cluster-additional",
            "name_prefix": "",
            "owner_id": "503517101544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "terra-cluster",
              "GithubOrg": "soinshane",
              "GithubRepo": "basic-api-2"
            },
            "tags_all": {
              "Example": "terra-cluster",
              "GithubOrg": "soinshane",
              "GithubRepo": "basic-api-2",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:security-group/sg-0812189c076430a6b",
            "description": "Allow remote SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0812189c076430a6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra-cluster-remote-access",
            "name_prefix": "",
            "owner_id": "503517101544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "terra-cluster",
              "GithubOrg": "soinshane",
              "GithubRepo": "basic-api-2"
            },
            "tags_all": {
              "Example": "terra-cluster",
              "GithubOrg": "soinshane",
              "GithubRepo": "basic-api-2",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:security-group/sg-035cbc5f60084c422",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-035cbc5f60084c422",
            "ingress": [],
            "name": "basic-api-2-cluster-20220422041836827800000004",
            "name_prefix": "basic-api-2-cluster-",
            "owner_id": "503517101544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-api-2-cluster"
            },
            "tags_all": {
              "Name": "basic-api-2-cluster",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:security-group/sg-0ee4c9b9f14140e0a",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ee4c9b9f14140e0a",
            "ingress": [],
            "name": "basic-api-2-node-20220422041837134000000005",
            "name_prefix": "basic-api-2-node-",
            "owner_id": "503517101544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-api-2-node",
              "kubernetes.io/cluster/basic-api-2": "owned"
            },
            "tags_all": {
              "Name": "basic-api-2-node",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "kubernetes.io/cluster/basic-api-2": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3765777165",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035cbc5f60084c422",
            "self": false,
            "source_security_group_id": "sg-0ee4c9b9f14140e0a",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "To node 1025-65535",
            "from_port": 1025,
            "id": "sgrule-1464156274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035cbc5f60084c422",
            "self": false,
            "source_security_group_id": "sg-0ee4c9b9f14140e0a",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3463246806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035cbc5f60084c422",
            "self": false,
            "source_security_group_id": "sg-0ee4c9b9f14140e0a",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4062520312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035cbc5f60084c422",
            "self": false,
            "source_security_group_id": "sg-0ee4c9b9f14140e0a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-1649121953",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3899251203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": false,
            "source_security_group_id": "sg-035cbc5f60084c422",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-4260467785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-573548887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1555139674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-62044981",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2379561299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-540146474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": false,
            "source_security_group_id": "sg-035cbc5f60084c422",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1762874387",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": false,
            "source_security_group_id": "sg-035cbc5f60084c422",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-3641408661",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3670301934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2124152577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ee4c9b9f14140e0a",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:security-group/sg-02f805cac0f9efefa",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-02f805cac0f9efefa",
            "ingress": [],
            "name": "data-eks-node-group-20220422041838763700000008",
            "name_prefix": "data-eks-node-group-",
            "owner_id": "503517101544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "data-eks-node-group"
            },
            "tags_all": {
              "Name": "data-eks-node-group",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.additional",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"main\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:security-group/sg-03718ee5619ec6204",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-03718ee5619ec6204",
            "ingress": [],
            "name": "main-eks-node-group-20220422041838763800000009",
            "name_prefix": "main-eks-node-group-",
            "owner_id": "503517101544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-eks-node-group",
              "terra": "main-node-group"
            },
            "tags_all": {
              "Name": "main-eks-node-group",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "terra": "main-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.additional",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f57102349a1faced",
            "domain": "vpc",
            "id": "eipalloc-0f57102349a1faced",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-215-139-119.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.139.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "k8s-vpc-us-west-1b",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:internet-gateway/igw-0716ee3bc0f4eced5",
            "id": "igw-0716ee3bc0f4eced5",
            "owner_id": "503517101544",
            "tags": {
              "Name": "k8s-vpc"
            },
            "tags_all": {
              "Name": "k8s-vpc",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f57102349a1faced",
            "connectivity_type": "public",
            "id": "nat-01c4005f4b7185e43",
            "network_interface_id": "eni-0186a3d7c7dfa0177",
            "private_ip": "172.16.4.230",
            "public_ip": "54.215.139.119",
            "subnet_id": "subnet-07e1c383e79c01b46",
            "tags": {
              "Name": "k8s-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "k8s-vpc-us-west-1b",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb951169be8422941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01c4005f4b7185e43",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb951169be842294",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0716ee3bc0f4eced5",
            "id": "r-rtb-0fde8704e896b3ed81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fde8704e896b3ed8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:route-table/rtb-0eb951169be842294",
            "id": "rtb-0eb951169be842294",
            "owner_id": "503517101544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-vpc-private"
            },
            "tags_all": {
              "Name": "k8s-vpc-private",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:route-table/rtb-0fde8704e896b3ed8",
            "id": "rtb-0fde8704e896b3ed8",
            "owner_id": "503517101544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-vpc-public"
            },
            "tags_all": {
              "Name": "k8s-vpc-public",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5ca854846b791a",
            "route_table_id": "rtb-0eb951169be842294",
            "subnet_id": "subnet-099acaa278a0e813b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e99ae4665ef6bb60",
            "route_table_id": "rtb-0eb951169be842294",
            "subnet_id": "subnet-0b65d5d8ec9de78a8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095b4bacdeafd123f",
            "route_table_id": "rtb-0eb951169be842294",
            "subnet_id": "subnet-0ee13c92587a63a63"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049fd77993f4911b5",
            "route_table_id": "rtb-0fde8704e896b3ed8",
            "subnet_id": "subnet-07e1c383e79c01b46"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd9563d704af4a1d",
            "route_table_id": "rtb-0fde8704e896b3ed8",
            "subnet_id": "subnet-07e0b4077334ae45c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025e3e15154ffadfa",
            "route_table_id": "rtb-0fde8704e896b3ed8",
            "subnet_id": "subnet-0e292307deca6e340"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:subnet/subnet-099acaa278a0e813b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099acaa278a0e813b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503517101544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-vpc-private-us-west-1b",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "k8s-vpc-private-us-west-1b",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:subnet/subnet-0b65d5d8ec9de78a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b65d5d8ec9de78a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503517101544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-vpc-private-us-west-1c",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "k8s-vpc-private-us-west-1c",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:subnet/subnet-0ee13c92587a63a63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee13c92587a63a63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503517101544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-vpc-private-us-west-1b",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "k8s-vpc-private-us-west-1b",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:subnet/subnet-07e1c383e79c01b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e1c383e79c01b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503517101544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-vpc-public-us-west-1b",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-vpc-public-us-west-1b",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:subnet/subnet-07e0b4077334ae45c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e0b4077334ae45c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503517101544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-vpc-public-us-west-1c",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-vpc-public-us-west-1c",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:subnet/subnet-0e292307deca6e340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e292307deca6e340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503517101544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-vpc-public-us-west-1b",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-vpc-public-us-west-1b",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop",
              "kubernetes.io/cluster/basic-api-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dbc4c9e7479d7a7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:503517101544:vpc/vpc-0dbc4c9e7479d7a7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0490447eaf68932cd",
            "default_route_table_id": "rtb-0371e64a064a500e5",
            "default_security_group_id": "sg-0a235b11f93efde1a",
            "dhcp_options_id": "dopt-92ac56f4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dbc4c9e7479d7a7d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0371e64a064a500e5",
            "owner_id": "503517101544",
            "tags": {
              "Name": "k8s-vpc"
            },
            "tags_all": {
              "Name": "k8s-vpc",
              "appname": "basic-app",
              "appversion": "1.0.0",
              "deploy": "terraform",
              "env": "develop"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}